0.3.0
    * new_account_key supports LetsEncrypt updates to EC
    * ALLOWED_CURVES_ECDSA is now a list of strings
    * new_ec_key named argument is now curve(str)
    * functions now require KeyTechnologyEnum, not KeyTechnology for key_technology_id

0.2.0
    * replaced pyopenssl with cryptography.
      pyopenssl was originally used because certbot required it and this package
      was originally developed to troubleshoot certbot installations;
      however certbot uses cryptography, so we can consider that to be available
      and it is the officially preferred interface by both projects and the psf.
    * split the package into multiple files
      this is for internal use and organization is subject to change.
      please access the main namespace.
    * dropped Python3.6
      this package requires cryptography>=42.0.0, specifically for chain verification
      cryptography dropped Python3.6 in v41.0.0

0.1.9
    pulled ari serial_no decoder into a separate unction
    parsing akid defensively against edge case variants:
        in web pki it is almost always "keyid:"
        however the rfc allows for "uri:"+"serial:", 
        either in addition to keyid or replacing it
    this should be the final release in the 0.1.x branch;
    work has been started for 0.2.0, which will migrate away from openssl

0.1.8
    added cert_info cli tool

0.1.7
    ARI support
        * ari_construct_identifier()
    added `serial` to parse_cert dicts
    testing on py13

0.1.6
    updated LetsEncrypt data

0.1.5 [deleted from PyPi]
    updated typing and tests
    updated LetsEncrypt data
    
0.1.4
    updated typing for dependencies

0.1.3
    new mypy version caught an issue

0.1.2
    docs improvements
    raise a new `FallbackError_FilepathRequired` exception when missing a
        required fallback filepath

0.1.1
    minor formatting
    Conditional Imports
        imports are tried "one at a time"; not "all or nothing".